[gd_scene load_steps=30 format=2]

[ext_resource path="res://gui/perk/perk.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/other/white_circle_64x64.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/white-cancel-icon_24x24.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/FC Galaxy Italic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/other/white-64x64.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/perk/health_up.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/perk/water_up.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/perk/food_up.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/perk/sniper_damage_up.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/perk/pistol_damage_up.png" type="Texture" id=11]
[ext_resource path="res://assets/icons/perk/knife_damage_up.png" type="Texture" id=12]
[ext_resource path="res://assets/icons/perk/increase_hearing_rate.png" type="Texture" id=13]
[ext_resource path="res://assets/icons/perk/run_speed_up.png" type="Texture" id=14]
[ext_resource path="res://assets/icons/next_icon.png" type="Texture" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_top = 40
border_color = Color( 0.945098, 0.819608, 0.266667, 1 )
shadow_size = 32

[sub_resource type="DynamicFont" id=2]
size = 28
extra_spacing_top = 8
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
border_width_top = 40

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.392157, 0.392157, 0.392157, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=5]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 24
extra_spacing_top = 16
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 24
extra_spacing_top = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
border_width_top = 40

[sub_resource type="DynamicFont" id=10]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.3, 1 )
colors = PoolColorArray( 0.945098, 0.819608, 0.266667, 1, 0.223529, 0.215686, 0.121569, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="StyleBoxTexture" id=13]
texture = SubResource( 12 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="DynamicFont" id=14]
size = 52
outline_size = 1
extra_spacing_char = 4
font_data = ExtResource( 5 )

[node name="perk" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -284.0
margin_right = 496.0
margin_bottom = 212.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 16.0
margin_right = 144.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PERK"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_button" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = 68.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/close_button"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 12.0
margin_top = 12.0
margin_right = 52.0
margin_bottom = 52.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Panel" parent="Panel"]
margin_left = 552.0
margin_top = 64.0
margin_right = 968.0
margin_bottom = 472.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/details"]
margin_left = 46.0
margin_top = 258.0
margin_right = 376.0
margin_bottom = 336.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header_name" type="Label" parent="Panel/details"]
margin_right = 408.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "รายละเอียด"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Panel/details"]
margin_left = 168.0
margin_top = 80.0
margin_right = 232.0
margin_bottom = 144.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="perk_description" type="RichTextLabel" parent="Panel/details"]
margin_left = 58.0
margin_top = 158.0
margin_right = 364.0
margin_bottom = 292.0
custom_fonts/normal_font = SubResource( 6 )
text = "เพิ่มความเร็วในการเคลื่อนที่ของตัวละครและสุนัข"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_point" type="Label" parent="Panel/details"]
margin_left = 76.0
margin_top = 282.0
margin_right = 151.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 7 )
text = "แต้มที่มี 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade_progress" type="Label" parent="Panel/details"]
margin_left = 76.0
margin_top = 356.0
margin_right = 151.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 7 )
text = "0/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="point_req" type="Label" parent="Panel/details"]
margin_left = 232.0
margin_top = 282.0
margin_right = 352.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 7 )
text = "แต้มที่ต้องการ 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade_button" type="Button" parent="Panel/details"]
margin_left = 234.0
margin_top = 346.0
margin_right = 350.0
margin_bottom = 398.0
custom_fonts/font = SubResource( 8 )
text = "อัพเกรด"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="perk_list" type="Panel" parent="Panel"]
margin_left = 24.0
margin_top = 64.0
margin_right = 528.0
margin_bottom = 472.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/perk_list"]
margin_left = 32.0
margin_top = 56.0
margin_right = 472.0
margin_bottom = 396.0
custom_constants/hseparation = 24
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_0" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_right = 208.0
margin_bottom = 82.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_0"]
position = Vector2( 56, 40 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_0"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 40 )
texture = ExtResource( 15 )

[node name="skill_1" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 232.0
margin_right = 440.0
margin_bottom = 82.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_1"]
position = Vector2( 64, 40 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_1"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 40 )
texture = ExtResource( 15 )

[node name="skill_2" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_top = 86.0
margin_right = 208.0
margin_bottom = 168.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_2"]
position = Vector2( 56, 42 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_2"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 42 )
texture = ExtResource( 15 )

[node name="skill_3" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 232.0
margin_top = 86.0
margin_right = 440.0
margin_bottom = 168.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_3"]
position = Vector2( 64, 42 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_3"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 42 )
texture = ExtResource( 15 )

[node name="skill_4" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_top = 172.0
margin_right = 208.0
margin_bottom = 254.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_4"]
position = Vector2( 56, 42 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_4"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 42 )
texture = ExtResource( 15 )

[node name="skill_5" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 232.0
margin_top = 172.0
margin_right = 440.0
margin_bottom = 254.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_5"]
position = Vector2( 64, 42 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_5"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 40 )
texture = ExtResource( 15 )

[node name="skill_6" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_top = 258.0
margin_right = 208.0
margin_bottom = 340.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_6"]
position = Vector2( 56, 40 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_6"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 40 )
texture = ExtResource( 15 )

[node name="skill_7" type="TextureButton" parent="Panel/perk_list/GridContainer"]
self_modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 232.0
margin_top = 258.0
margin_right = 440.0
margin_bottom = 340.0
rect_min_size = Vector2( 208, 82 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Sprite" type="Sprite" parent="Panel/perk_list/GridContainer/skill_7"]
position = Vector2( 64, 40 )
texture = ExtResource( 13 )

[node name="Sprite2" type="Sprite" parent="Panel/perk_list/GridContainer/skill_7"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 164, 40 )
texture = ExtResource( 15 )

[node name="healder_name" type="Label" parent="Panel/perk_list"]
margin_right = 488.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "สกิลทั้งหมด"
align = 1
valign = 1

[node name="bottom_bar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bottom_bar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -32.0
margin_right = -17.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 14 )
text = "Press B to close"
[connection signal="pressed" from="Panel/close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_0" to="." method="_on_skill_0_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_1" to="." method="_on_skill_1_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_2" to="." method="_on_skill_2_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_3" to="." method="_on_skill_3_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_4" to="." method="_on_skill_4_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_5" to="." method="_on_skill_5_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_6" to="." method="_on_skill_6_pressed"]
[connection signal="pressed" from="Panel/perk_list/GridContainer/skill_7" to="." method="_on_skill_7_pressed"]
